--- a/templates/administration/index.html.twig
+++ b/templates/administration/index.html.twig
@@ -18,4 +18,8 @@
         <li>Ma var de test est {{ test_var  }} {{ test_var  }}</li>
     </ul>
 </div>
+
+<pre>
+    {{ dump(locataires) }}
+</pre>
 {% endblock %}
