--- a/templates/administration/ajout-locataire.html.twig
+++ b/templates/administration/ajout-locataire.html.twig
@@ -44,7 +44,7 @@
 						{{ form_errors(form.mail) }}</div>
 
 					<div class="col-6">
-						{{ form_label(form.tel) }}
+						<label for="tel">Téléphone</label>
 						{{ form_widget(form.tel, {'attr': {'class': 'form-control'}}) }}
 						{{ form_errors(form.tel) }}</div>
 
