--- a/templates/administration/liste-appartement.html.twig
+++ b/templates/administration/liste-appartement.html.twig
@@ -39,7 +39,7 @@
         </div>
 
 
-		<div class="row" data-toggle="dragula" data-dragula-containers='["#cards-moves-left", "#cards-moves-right"]' data-dragula-moves="js-dragula-handle">
+		<div class="row" >
 			<div class="col-md">
 
 
@@ -238,4 +238,5 @@
 		</div>
 
 	</div>
+
 {% endblock %}
