--- a/templates/administration/liste-locataire.html.twig
+++ b/templates/administration/liste-locataire.html.twig
@@ -31,7 +31,7 @@
 		</div>
 
 
-		<div class="row" data-toggle="dragula" data-dragula-containers='["#cards-moves-left", "#cards-moves-right"]' data-dragula-moves="js-dragula-handle">
+		<div class="row" >
 			<div class="col-md">
 
 
