--- a/templates/administration/modifier-locataire.html.twig
+++ b/templates/administration/modifier-locataire.html.twig
@@ -3,38 +3,43 @@
 {% block title %}Liste Locataires{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: red; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1> Modifier Locataire</h1>
-
-    {{dump(locataire)}}
 
 
- 
 
- 
+<div class="container">
 
-  <form method="post" action="/modifier-locataire/{{locataire.id}}">
-     <label for="nom">Nom</label>
-    <input type="text" name="nom" id="nom" value="{{locataire.nom}}" required>
 
-    <label for="prenom">Prénom</label>
-    <input type="text" name="prenom" id="prenom" value="{{locataire.prenom}}" required>
+		<div class="card shadow-lg  mb-5 bg-body mt-5">
+			<div class="card-header">
 
-    <label for="mail ">Email</label>
-    <input type="email" name="mail" id="mail" value="{{locataire.mail}}" required>
+				<h1>
+					Modifier Locataire</h1>
 
-    <label for="tel">Téléphone</label>
-    <input type="tel" name="tel" id="tel" value="{{locataire.tel}}" required>
+
+			</div>
+			<div class="card-body media align-items-center  row p-5">
+
+
+		
+
+        
+  <form method="post" action="/modifier-locataire/{{locataire.id}}" class="mt-3 row  g-3">
+     <label for="nom" class="form-label">Nom</label>
+    <input type="text" name="nom" id="nom" value="{{locataire.nom}}" class="form-control" required>
+
+    <label for="prenom" class="form-label">Prénom</label>
+    <input type="text" name="prenom" id="prenom" value="{{locataire.prenom}}" class="form-control" required>
+
+    <label for="mail" class="form-label">Email</label>
+    <input type="email" name="mail" id="mail" value="{{locataire.mail}}" class="form-control" required>
+
+    <label for="tel" class="form-label">Téléphone</label>
+    <input type="tel" name="tel" id="tel" value="{{locataire.tel}}" class="form-control" required>
 
     
-       <button type="submit" value="1" name="modifierLocataire">Modifier</button>
+       <button type="submit" value="1" name="modifierLocataire" class="btn btn-success">Modifier</button>
   </form>
-    
 
-</div>
+
+			</div>
 {% endblock %}
