--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,12 +3,23 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="container">
 
-    {{ form_start(form) }}
-        {{ form_row(form.email) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
-        {{ form_row(form.submit) }}
+
+		<div class="card shadow-lg  mb-5 bg-body mt-5">
+			<div class="card-header">
+
+				<h1>
+					Inscription</h1>
+
+
+			</div>
+			<div class="card-body media align-items-center  row p-5">
+
+    {{ form_start(form , {'attr': {'class': 'mt-3 row  g-3'}}) }}
+        {{ form_row(form.email ,{'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.plainPassword.second ,{'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.submit , {'attr': {'class': 'btn btn-success'}}) }}
     {{ form_end(form) }}
 {% endblock %}
